--- a/_posts/2015-05-15-images.md
+++ b/_posts/2015-05-15-images.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: a post with images
+title: TS. Vũ Hoài Nam phát biểu tại sự kiện của Bộ Khoa học Công nghệ
 date: 2025-05-15 21:01:00
-description: this is what included images could look like
+description: TS. Vũ Hoài Nam – Giảng viên khoa AI PTIT phát biểu tại Lễ kỷ niệm 80 năm ngành Bưu chính Viễn thông, 66 năm ngành Khoa học & Công nghệ và Đại hội Thi đua yêu nước lần thứ I
 tags: formatting images
 categories: sample-posts
 thumbnail: assets/img/9.jpg
@@ -10,6 +10,11 @@ thumbnail: assets/img/9.jpg
 
 This is an example post with image galleries.
 
+<div class="image-container">
+    <img src="assets/img/Nam-A80-1.jpg" alt="Ảnh mẫu">
+    <h3>TS. Nam tại sự kiện</h3>
+    <p>Ảnh đơn</p>
+</div>
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.liquid loading="eager" path="assets/img/9.jpg" class="img-fluid rounded z-depth-1" %}
@@ -26,9 +31,6 @@ Images can be made zoomable.
 Simply add `data-zoomable` to `<img>` tags that you want to make zoomable.
 
 <div class="row mt-3">
-    <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/img/8.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
-    </div>
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.liquid loading="eager" path="assets/img/10.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
