--- a/_posts/2025-08-01-intracom.md
+++ b/_posts/2025-08-01-intracom.md
@@ -2,7 +2,7 @@
 layout: post
 title: Dr. Nam delivered speech at Intracom AI conference
 date: 2025-08-01 14:24:00
-description: this is what included plotly.js code could look like
+description: Dr. Nam delivered speech at Intracom AI conference
 tags: formatting charts
 categories: sample-posts
 chart:
