--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,9 +52,8 @@
   pdf={example_pdf.pdf},
   altmetric={0},
   dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  selected={true},
-  inspirehep_id = {3255}
+  google_scholar_id={3fE2CSJIrl8C},
+  selected={true}
 }
 
 @article{einstein1905molekularkinetischen,
